--- a/templates/Item/edit.html.twig
+++ b/templates/Item/edit.html.twig
@@ -5,25 +5,15 @@
 {% block body %}
     <div class="new_item_page">
         <div>
-            <h1 id="registration_title">{{ 'ITEM.NEW.TITLE'|trans }}</h1>
+            <h1 id="registration_title">{{ 'ITEM.EDIT.TITLE'|trans }}</h1>
         </div>
-        <div id="item_detail_buttons">
-            <div class="registration_form_container">
-                {{ include('item/form.html.twig', {'button_label': 'Add Item'}) }}
-            </div>
-        </div>
-
     </div>
     <div>
         {{ form_start(form) }}
         {{ form_widget(form) }}
-
     </div>
     <div id="add_item_buttons" class="d-flex justify-content-between">
-        <a href="{{ path('item_index') }}">
-            <button type="button" class="button">{{ 'ITEM.NEW.BACKLINK'|trans }}</button>
-        </a>
-        <button class="button">{{ button_label|default('Save') }}</button>
+        <button class="button">Save</button>
     </div>
     {{ form_end(form) }}
 {% endblock %}
