--- a/templates/Main/footer.html.twig
+++ b/templates/Main/footer.html.twig
@@ -8,7 +8,7 @@
         </li>
         <li>
             <!-- Copyright -->
-            {{ 'APP.TITLE' | trans }} &copy; 2019 Copyright
+            {{ 'APP.TITLE' | trans }} &copy; 2019
             <!-- Copyright -->
         </li>
     </ul>
