--- a/templates/Main/navbar.html.twig
+++ b/templates/Main/navbar.html.twig
@@ -1,6 +1,6 @@
 <nav class="navbar">
     <div id="logo">
-    <a href="{{ path('homepage') }}"><p>LetzSwap</p></a>
+    <a href="{{ path('homepage') }}"><p>{{ 'APP.TITLE'|trans }}</p></a>
     </div>
     <ul class="navbar_list">
 
