--- a/templates/Registration/registration.html.twig
+++ b/templates/Registration/registration.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 {% trans_default_domain 'registration' %}
 
-{% block title %}Letzswap | {{ 'REGISTRATION.TITLE'|trans({}, 'registration') }}{% endblock %}
+{% block title %}{{ 'REGISTRATION.TITLE'|trans({}, 'registration') }}{% endblock %}
 
 {% block body %}
     <div class="registration_page">
@@ -9,7 +9,7 @@
             <h1 id="registration_title">{{ 'REGISTRATION.TITLE'|trans }}</h1>
         </div>
         <div class="registration_form_container">
-        {{ form(registrationForm) }}
+            {{ form(registrationForm) }}
         </div>
     </div>
 {% endblock %}
