--- a/templates/Main/index.html.twig
+++ b/templates/Main/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Welcome to LëtzSwap!{% endblock %}
+{% block title %}{{ 'HOME.PAGETITLE'|trans }}{% endblock %}
 
 {% block body %}
     <main>
@@ -12,8 +12,8 @@
                         {% if picture.item.id  == item.getId() %}
                             <div class="col">
                                 <div class="card" style="width: 17rem;">
-                                    {#  TODO: Remove the width of the image, use CSS - Adolfo #}
-                                    <img class="card-img-top" src="{{ path('get_picture_content', {'picture': picture.getId()}) }}"
+                                    <img class="card-img-top"
+                                         src="{{ path('get_picture_content', {'picture': picture.getId()}) }}"
                                          alt="{{ item.title }}" width="250px">
                                     <div class="card-body">
                                         <h5 class="card-title">{{ item.title }}</h5>
