--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -18,6 +18,7 @@
         <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400i,600,600i,700,700i,900,900i"
               rel="stylesheet">
         <link rel="stylesheet" href= {{ asset('css/style.css') }}>
+        {{ encore_entry_link_tags('app') }}
 
     {% endblock %}
 </head>
@@ -41,7 +42,7 @@
             crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.4/TweenMax.min.js"></script>
     <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/MorphSVGPlugin.min.js?r=132"></script>
-
+    {{ encore_entry_script_tags('app') }}
 {% endblock %}
 </body>
 
