--- a/templates/About/about.html.twig
+++ b/templates/About/about.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
 
     <article class="about_info">
-        <h2>About LetzSwap </h2>
+        <h2>About <span>LëtzSwap</span> </h2>
 
         <p>
             LetzSwap provides users a place where they can post unwanted items to swap them between themselves.
@@ -13,7 +13,7 @@
         <p>
             Most of us are more and more aware about the effects of our purchase habits and communities are demanding for more sustainable ways to answer their needs.
         </p>
-
+        <p> Have any questions or inquiries?</p>
         <h2>Contact us </h2>
 {#{% include 'Contact/contact.html.twig' %}#}
     {{ form(contactForm) }}
