--- a/templates/Main/index.html.twig
+++ b/templates/Main/index.html.twig
@@ -13,7 +13,8 @@
                             <div class="col">
                                 <div class="card" style="width: 17rem;">
                                     {#  TODO: Remove the width of the image, use CSS - Adolfo #}
-                                    <img class="card-img-top" src="{{ path('get_picture_content', {'picture': picture.getId()}) }}"
+                                    <img class="card-img-top"
+                                         src="{{ path('get_picture_content', {'picture': picture.getId()}) }}"
                                          alt="{{ item.title }}" width="250px">
                                     <div class="card-body">
                                         <div class="card_category_free">Free</div>
